# legacybridge-oss-cobol

./: .dockerignore  .env.example  .gitignore  DOCKER_GUIDE.md  DOCKER_QUICKSTART.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.dev  Dockerfile.pip  Dockerfile.simple  PARAMETERS.md  PYTHON_MIGRATION_GUIDE.md  README (conflicted).md  README.md  dev-run-example.sh  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run-dev.sh  run.sh  setup.py  test_instructor_hooks.py
cobol_migration_agents/: __init__.py  cli.py  migration_orchestrator.py  simple_hooks_test.py
cobol_migration_agents/agents/: __init__.py  cobol_analyzer_agent.py  dependency_mapper_agent.py  java_converter_agent.py
cobol_migration_agents/config/: __init__.py  instructor_config.py  settings.py
cobol_migration_agents/models/: __init__.py  cobol_models.py  dependency_models.py  java_models.py  migration_schemas.py
cobol_migration_agents/services/: __init__.py  file_manager.py  instructor_logging_service.py  logging_service.py  report_generator.py
config/: settings.env.example
scripts/: docker-setup.sh  doctor.py  setup.py
tests/: __init__.py  azure_simple_test.py  azure_test_intercept_instructor_error.py  test_config.py  test_dependency_mapper_api.py  test_instructor_hooks.py  test_intercept_instructor_error.py  test_java_converter_api.py  test_models.py  test_raw_api_response.py  test_simple_hooks.py
